adding some new components and cleaning up others, new grid layout sort of works

--- a/components/card.html
+++ b/components/card.html
@@ -7,37 +7,37 @@
 	    const children = Array.from(self.children)
 	    for (const child of children) {
 		if (child.className =="card shadow") break;
-		contentSlot.appendChild(child.cloneNode())
 		self.removeChild(child)
+		contentSlot.appendChild(child.cloneNode())
 	    }
         }
     });
 </script>
 
 <style>
-    .card {
-	display: block;
-        position: inline;
-        width: 300px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        background-color: white;
-        padding: 20px;
-        cursor: default;  /* Default cursor */
-    }
+.card {
+display: block;
+position: inline;
+width: 300px;
+border: 1px solid #ccc;
+border-radius: 8px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+background-color: white;
+padding: 20px;
+cursor: default;
+}
 
-    #card-header {
-        font-size: 18px;
-        font-weight: bold;
-        padding: 10px;
-        background-color: #f4f4f4;
-        border-bottom: 1px solid #ccc;
-    }
+#card-header {
+font-size: 18px;
+font-weight: bold;
+padding: 10px;
+background-color: #f4f4f4;
+border-bottom: 1px solid #ccc;
+}
 
-    [draggable="true"] .card {
-        cursor: move;
-    }
+[draggable="true"] .card {
+cursor: move;
+}
 </style>
 
 <template id="sexel-card">
