--- a/components/header.html
+++ b/components/header.html
@@ -1,40 +1,61 @@
 <script>
-    // Define the 'sexel-header' component using the Sexel framework
-    Sexel.tag('sexel-header', ['logo','value'], {
-        ondraw: (self) => {
-            const logo = self.querySelector('#logo');
-            const header = self.querySelector('#header');
-	console.log(header)
-            logo.src = self.logo()
-            header.textContent = self.value()
-        }
-    });
+Sexel.tag('sexel-header', ['logo','value'], {
+	ondraw: (self) => {
+		const logo = self.querySelector('#logo')
+		const title = self.querySelector('#value')
+		const rightHeader = self.querySelector("#right-content")
+		logo.src = self.logo()
+		title.textContent = self.value()
+		if (self.innerHTML.trim() === "") return;
+		for (const child of self.children) {
+			if (child.className == "sexel-header") break;
+			self.removeChild(child)
+			rightHeader.appendChild(child)
+		}
+	}
+});
 </script>
 
 <style>
-    .sexel-header {
-        display: flex;
-        align-items: center;
-        background-color: #f9f9f9; /* Light background color */
-        padding: 10px 20px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-    }
+.sexel-header {
+	display: flex;
+	align-items: center;
+	background-color: #f9f9f9;
+	padding: 10px 20px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	width: 100%;
+	justify-content: space-between;
+}
 
-    #logo {
-        width: 50px;
-        height: 50px;
-        margin-right: 20px; /* Space between logo and title */
-    }
+#logo {
+	width: 50px;
+	height: 50px;
+	margin-right: 20px;
+}
 
-    #header {
-        color: #333; /* Darker text color */
-    }
+#value {
+	font-weight: bold;
+	font-size: 32px;
+	color: #333;
+}
+
+#left-content {
+	display: flex;
+	margin-left: 0;
+	align-items: center;
+}
+
+#right-content {
+	display: flex;
+	align-items: center;
+	padding-right: 5%;
+}
 </style>
 
 <template id="sexel-header">
-    <div class="sexel-header" class="shadow">
-        <img id="logo" alt="Sexel Logo" />
-        <div id="header" class="header"></div>
-    </div>
+<div class="sexel-header" class="shadow">
+<div id="left-content"><img id="logo" alt="Logo" /><span id="value"></span> </div>
+<div id="right-content"></div>
+</div>
 </template>
 
