--- a/components/card.html
+++ b/components/card.html
@@ -31,7 +31,7 @@ cursor: default;
 font-size: 18px;
 font-weight: bold;
 padding: 10px;
-background-color: #f4f4f4;
+background-color: none;
 border-bottom: 1px solid #ccc;
 }
 
