--- a/components/audio.html
+++ b/components/audio.html
@@ -58,24 +58,24 @@
         align-items: center;
         gap: 10px;
         padding: 10px;
-        border: 1px solid #ccc;
+        border: var(--base-border);
         border-radius: 8px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        background-color: var(--base-background);
+        box-shadow: var(--basae-shadow);
     }
 
     .audio-button {
-        background-color: rgb(100, 142, 174);
-        color: white;
-        border: none;
-        border-radius: 4px;
+        background-color: var(--button-background-color);
+        color: var(--button-color);
+        border: var(--button-border);
+        border-radius: var(--button-border-radius);
         cursor: pointer;
-        font-size: 14px;
+        font-size: var(--button-font-size);
         padding: 8px 12px;
     }
 
     .audio-button:hover {
-        background-color: rgb(87, 101, 112);
+        background-color: var(--button-hover-color);
     }
 </style>
 
