--- a/components/avatar.html
+++ b/components/avatar.html
@@ -55,15 +55,15 @@
         top: 60px;  /* Adjust as needed */
         left: 50%;
         transform: translateX(-50%);
-        background-color: #333;
-        color: #fff;
+        background-color: var(--color-dark);
+        color: var(--color-light);
         padding: 10px;
-        border-radius: 5px;
-        font-size: 12px;
+        border-radius: var(--base-border-radius);
+        font-size: var(--base-font-smaller);
         text-align: left;
         z-index: 1000;
         white-space: nowrap;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--base-shadow);
     }
 </style>
 
