--- a/components/code.html
+++ b/components/code.html
@@ -24,7 +24,7 @@
         font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
 	padding: 10px;
         border-radius: 5px;
-        background-color: #f4f4f4;
+        background-color: var(--base-background);
         overflow-x: auto;
 
     }
