--- a/components/chat.html
+++ b/components/chat.html
@@ -148,7 +148,7 @@ background-color: rgb(240, 240, 240);
 }
 
 .unicode-grid button:hover {
-background-color: rgb(220, 220, 220);
+background-color: var(--base-background);
 }
 </style>
 
