--- a/components/data.html
+++ b/components/data.html
@@ -60,18 +60,19 @@
     }
 
     .sexel-table th, .sexel-table td {
-        border: 1px solid #ddd;
+        border: var(--base-border);
         padding: 8px;
         text-align: left;
     }
 
     .sexel-table th {
-        background-color: #f2f2f2;
+        background-color: var(--base-color-tint);
+	color: var(--base-inverse);
         font-weight: bold;
     }
 
     .sexel-table tr:nth-child(even) {
-        background-color: #f9f9f9;
+        background-color: var(--color-medium);
     }
 </style>
 
