--- a/components/chat.html
+++ b/components/chat.html
@@ -67,7 +67,8 @@ Sexel.tag('sexel-chat', ['endpoint','to', 'from'], {
 		}
 
 		downloadButton.onclick = () => {
-			const blob = new Blob([chatLog], { type: 'text/plain' })
+			console.log("Chat Log",chatHistory.textContent)
+			const blob = new Blob([chatHistory.textContent], { type: 'text/plain' })
 			const link = document.createElement('a')
 			link.href = URL.createObjectURL(blob)
 			link.download = 'chat-log.txt'
@@ -85,7 +86,7 @@ width: 100%;
 height: 400px;
 border: 1px solid #ccc;
 border-radius: 8px;
-background-color: #f9f9f9;
+background-color: var(--base-background);
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -126,13 +127,14 @@ margin-left: 5px;
 }
 
 .upload-button:hover, .unicode-button:hover, .download-button:hover {
-background-color: rgb(87, 101, 112);
+background-color: var(--base-color-tint);
 }
 
 .unicode-grid {
 display: none;
 position: absolute;
-background-color: white;
+background-color: var(--base-background);
+color: var(--base-text);
 border: 1px solid #ccc;
 padding: 10px;
 grid-template-columns: repeat(5, 1fr);
@@ -144,12 +146,28 @@ font-size: 20px;
 cursor: pointer;
 padding: 8px;
 border: none;
-background-color: rgb(240, 240, 240);
 }
 
 .unicode-grid button:hover {
 background-color: var(--base-background);
+
 }
+
+.upload {
+	margin-left: 4px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: var(--button-background-color);
+	color: var(--button-color);
+	border-radius: 4px;
+}
+
+.upload:hover {
+	background-color: var(--button-hover-color);
+}
+
 </style>
 
 <template id="sexel-chat">
@@ -158,8 +176,9 @@ background-color: var(--base-background);
         <div class="chat-input-area">
             <textarea id="message-input" class="message-input" placeholder="Type your message..."></textarea>
             <button id="unicode-button" class="unicode-button">☺</button>
+	    <label for="upload-button" class="upload">&#x2630;</label>
             <input type="file" id="upload-button" class="upload-button" title="Upload a file" />
-            <button id="download-button" class="download-button">Download Log</button>
+            <button id="download-button" class="download-button">&#x21D3</button>
         </div>
         <div class="unicode-grid" id="unicode-grid">
             <button>☺</button>
