--- a/components/clock.html
+++ b/components/clock.html
@@ -38,14 +38,14 @@
 <style>
     .sexel-clock {
         font-family: 'Arial', sans-serif;
-        font-size: 16px;
+        font-size: var(--base-font-larger);
         font-weight: bold;
         padding: 10px;
-        background-color: #f9f9f9;
-        border: 1px solid #ccc;
-        border-radius: 4px;
+        background-color: var(--base-background);
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
         text-align: center;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--base-shadow);
     }
 </style>
 
