--- a/components/progress.html
+++ b/components/progress.html
@@ -24,18 +24,18 @@
         flex-direction: column;
         width: 100%;
         max-width: 500px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        background-color: #f1f1f1;
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
         padding: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        font-family: 'Arial', sans-serif;
+        box-shadow: var(--base-shadow);
+        font-family: var(--base-font);
     }
 
     #progress-bar-container {
         width: 100%;
         height: 30px;
-        background-color: #ddd;
+        background-color: var(--base-text);
         border-radius: 8px;
         overflow: hidden;
         position: relative;
@@ -43,17 +43,17 @@
 
     #progress-bar {
         height: 100%;
-        background-color: rgb(100, 142, 174);
+        background-color: var(--base-color-tint);
         width: 0; 
         transition: width 0.8s ease-in-out;
     }
 
     #progress-label {
         margin-top: 10px;
-        font-size: 14px;
+        font-size: var(--base-font-larger);
         text-align: center;
         font-weight: bold;
-        color: #333;
+        color: var(--base-text)
     }
 </style>
 
