themeing basically done

--- a/components/address.html
+++ b/components/address.html
@@ -17,6 +17,8 @@ const t = Sexel.tag('sexel-address',['email','name','address'],{
 }
 
 .sexel-address textarea {
+	background-color: var(--base-text);
+	color: var(--base-inverse);
 	border: var(--input-border);
 	width: 300px;
 	resize: none;
