--- a/components/auth.html
+++ b/components/auth.html
@@ -27,6 +27,8 @@
     }
 
     .sexel-auth input {
+	background-color: var(--base-text);
+	color: var(--base-inverse);
     }
 
     .sexel-auth button {
