--- a/components/data.html
+++ b/components/data.html
@@ -73,6 +73,7 @@
 
     .sexel-table tr:nth-child(even) {
         background-color: var(--color-medium);
+	color: var(--base-inverse);
     }
 </style>
 
