--- a/components/search.html
+++ b/components/search.html
@@ -23,18 +23,20 @@
         align-items: center;
         margin: 10px;
         padding: 8px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
+        box-shadow: var(--base-shadow);
     }
 
     .sexel-search input {
         flex: 1;
         padding: 8px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
+        font-size: var(--base-font-larger);
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+	background-color: var(--base-text);
+	color: var(--base-inverse);
         margin-right: 10px;
     }
 
@@ -42,15 +44,15 @@
         padding: 10px 15px;
         border: none;
         border-radius: 4px;
-        background-color: rgb(100, 142, 174);
-        color: white;
-        font-size: 16px;
+        background-color: var(--button-background-color);
+        color: var(--button-color);
+        font-size: var(--button-font-size);
         cursor: pointer;
-        font-weight: bold;
+        font-weight: var(--button-font-weight);
     }
 
     .sexel-search button:hover {
-        background-color: rgb(87, 101, 112);
+        background-color: var(--button-hover-color);
     }
 </style>
 
