--- a/components/spinner.html
+++ b/components/spinner.html
@@ -26,8 +26,8 @@
     .spinner {
         width: 40px;
         height: 40px;
-        border: 4px solid rgba(0, 0, 0, 0.1);  /* Light border */
-        border-top: 4px solid rgb(100, 142, 174);  /* Darker top border */
+        border: 4px solid var(--base-color);  /* Light border */
+        border-top: 4px solid var(--base-color-tint);  /* Darker top border */
         border-radius: 50%;  /* Make the shape circular */
         animation: spin 1s linear infinite;  /* Spin animation */
         display: none;  /* Initially hidden */
