--- a/components/upload.html
+++ b/components/upload.html
@@ -45,12 +45,12 @@
         display: flex;
         flex-direction: column;
         width: 300px;
-        border: 1px solid #ccc;
+        border: var(--base-border);
         padding: 16px;
-        border-radius: 8px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        font-family: 'Arial', sans-serif;
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
+        box-shadow: var(--base-shadow);
+        font-family: var(--base-font-family);
     }
 
     .sexel-upload input {
@@ -58,18 +58,18 @@
     }
 
     .sexel-upload label {
-        background-color: rgb(100, 142, 174);
-        color: rgb(250, 250, 250);
+        background-color: var(--button-background-color);
+        color: var(--button-color);
         padding: 10px;
         text-align: center;
-        border-radius: 4px;
+        border-radius: var(--base-border-radius);
         cursor: pointer;
-        font-size: 16px;
+        font-size: var(--base-font-larger);
         font-weight: bold;
     }
 
     .sexel-upload label:hover {
-        background-color: rgb(87, 101, 112);
+        background-color: var(--button-hover-colo-r);
     }
 
     .sexel-upload ul {
