--- a/theme.css
+++ b/theme.css
@@ -73,8 +73,7 @@
 	--notification-radius:		5px;
 }
 
-@media screen and (prefers-color-scheme: dark) {
-:root{
+@media screen and (prefers-color-scheme: dark) { :root{
 	
 	--base-inverse:			var(--color-dark);
 	--base-text:			var(--color-light);
@@ -85,5 +84,4 @@
 	--base-shadow: 			0 4px 6px rgba(64, 64, 64, 0.1); /* Subtle shadow */
 	--a-color:			var(--color-lightgray);
 	--h1-border:			3px solid rgb(64, 64, 64);
-}
-}
+}}
