fixing hover typo

--- a/components/upload.html
+++ b/components/upload.html
@@ -68,7 +68,7 @@
     }
 
     .sexel-upload label:hover {
-        background-color: var(--button-hover-colo-r);
+        background-color: var(--button-hover-color);
     }
 
     .sexel-upload ul {
