--- a/components/button.html
+++ b/components/button.html
@@ -1,6 +1,6 @@
 <script>
 Sexel.tag('sexel-button',['label','action','image'],{
-	onclick: (self,e) => { fsm(self.action(),self,e) },
+	onclick: (self,e) => { _(self.action(),self,e) },
 })
 </script>
 <style>
