--- a/components/form.html
+++ b/components/form.html
@@ -57,7 +57,7 @@
 			values[input.name] = input.value
 		})
 		console.log(self.action(),values)
-                fsm(self.action(), values); // Invoke the fsm action
+                _(self.action(), values); // Invoke the fsm action
             }
         }
     });
