--- a/components/menu.html
+++ b/components/menu.html
@@ -12,7 +12,7 @@ Sexel.tag('sexel-menu', ['orientation', 'items'], {
 			const button = document.createElement('button');
 			button.textContent = label
 			button.setAttribute('data-name', label);
-			button.onclick = (e) => fsm(label,self,e)
+			button.onclick = (e) => _(label,self,e)
 			container.appendChild(button)
 		});
 	}
